--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,10 +1,10 @@
 name: "Code Scanning - Action"
 
-# on:
+on:
 #   push:
 #     branches: [add-gin]
-#   pull_request:
-#     branches: [add-gin]
+  pull_request:
+    branches: [add-gin]
   # schedule:
   #   #        ┌───────────── minute (0 - 59)
   #   #        │  ┌───────────── hour (0 - 23)
