--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,10 +1,11 @@
 name: "Code Scanning - Action"
 
 on:
+  workflow-dispatch:
 #   push:
 #     branches: [add-gin]
-  pull_request:
-    branches: [add-gin]
+  # pull_request:
+  #   branches: [add-gin]
   # schedule:
   #   #        ┌───────────── minute (0 - 59)
   #   #        │  ┌───────────── hour (0 - 23)
