Trying out codeql only manual - fixed typo

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,7 +1,7 @@
 name: "Code Scanning - Action"
 
 on:
-  workflow-dispatch:
+  workflow_dispatch:
 #   push:
 #     branches: [add-gin]
   # pull_request:
