--- a/.github/workflows/configs/go_config.yml
+++ b/.github/workflows/configs/go_config.yml
@@ -1,4 +1,4 @@
-query-filters:
-  - exclude:
-    id:
-      - go/cleartext-transmission
+- qlpack: codeql/go-queries
+- exclude:
+  id:
+    - go/cleartext-transmission
